# robots

astar/minsnap/waypoint_trajectory_generator/src/: trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp  trajectory_generator_waypoint.h
gs/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
gs/devel/lib/communication_uwb/: communication_uwb_receive  communication_uwb_test  communication_uwb_transmit
gs/devel/lib/pkgconfig/: communication_uwb.pc  gs.pc
gs/devel/share/communication_uwb/cmake/: communication_uwbConfig.cmake
gs/devel/share/gs/cmake/: gsConfig.cmake
gs/src/communication_uwb/: readme.txt
gs/src/communication_uwb/src/: receive.cpp
gs/src/gs/: CMakeLists.txt
gs/src/gs/src/: ground.py  test.py
hybridAstar/devel/: .catkin  .rosinstall  local_setup.sh
hybridAstar/devel/lib/hybrid_astar/: hybrid_astar
hybridAstar/devel/lib/pkgconfig/: hybrid_astar.pc
hybridAstar/devel/share/hybrid_astar/cmake/: hybrid_astarConfig.cmake
lattice/devel/: .catkin  setup.sh
lattice/devel/lib/pkgconfig/: state_lattice_planner.pc
lattice/devel/lib/state_lattice_planner/: lookup_table_generator  state_lattice_planner  trajectory_viewer
lattice/devel/share/state_lattice_planner/cmake/: state_lattice_plannerConfig.cmake
nmpc/: LMPC.m  NMPC_Quadrotor_trajectory_tracking.m  NMPC_problem_formulation.m  lmpc.cpp  lmpc_controller.py  nmpc_controller.py
基站数据封包和测试/communication_uwb/: CMakeLists.txt
基站数据封包和测试/communication_uwb/src/: test.cpp  transmit.cpp
